2. Adding integration test, first and second integrations are tested and working
(cherry picked from commit b0dd17d5e8adda7535dd1cd260e5084e68537e24)